--- a/www/smg/extra/internal/linked/css/appSection.css
+++ b/www/smg/extra/internal/linked/css/appSection.css
@@ -15,7 +15,7 @@ Page Header
 
 ************************************************************************************/
 .topBar {
-	background-color: #c2d9e9; /* Light Blue #c2d9e9; #FFFFFF; */
+	background-color: #FFFFFF; /* Light Blue #c2d9e9; #FFFFFF; */
 	border-bottom:10px solid #0069aa; /* Blue #0069aa; | Extra Orange #FF7E0D; */
 	width:100%;
 	height:70px;
@@ -28,22 +28,22 @@ Page Header
 }
 
 .topLeft .mainLogo {
-	width: 60px;
+	width: 43px;
 	height:60px;
 	float:left;
 	display:block;
 	margin:5px 0px 0px 10px;
 	background-repeat:no-repeat;
-	background-image:url(../../images/onlineApp/logoSmall.gif);
+	background-image:url(../../pics/extra-small-logo.jpg);
 }
 
 .topLeft .printLogo {
-	width: 60px;
+	width: 43px;
 	height:60px;
 	top:0px;
 	left:5px;
 	position:absolute;
-	background-image:url(../../images/onlineApp/logoSmall.gif);
+	background-image:url(../../pics/extra-small-logo.jpg);
 	background-repeat:no-repeat;
 }
 
@@ -88,17 +88,17 @@ Page Header
 	font-weight:bold;
 	color: #ffffff; 
 	outline: none;	
-	background: #1484e6 url(../../images/onlineApp/buttonBlue.png) 50% 50% repeat; 	
+	background: #1484e6 url(../../pics/onlineApp/buttonBlue.png) 50% 50% repeat; 	
 }
 
 .topRight a:hover {
 	outline: none;
-	background: #e69700 url(../../images/onlineApp/buttonOrange.png) 50% 50% repeat; 	
+	background: #e69700 url(../../pics/onlineApp/buttonOrange.png) 50% 50% repeat; 	
 }
 
 .topRight a.selected {
 	outline: none;
-	background: #e69700 url(../../images/onlineApp/buttonOrange.png) 50% 50% repeat; 	
+	background: #e69700 url(../../pics/onlineApp/buttonOrange.png) 50% 50% repeat; 	
 }
 
 .welcomeMessage {
@@ -153,17 +153,17 @@ Left Side / Right Side Content
 	padding:0px 5px 0px 20px;
 	margin:15px 0px 5px 10px;
 	text-decoration:none;
-	background: url(../../images/onlineApp/rightArrow.gif) no-repeat; 
+	background: url(../../pics/onlineApp/rightArrow.gif) no-repeat; 
 }
 
 .leftSideBar .insideBar a:hover,
-.rightSideContent .insideBar a:hover{
+.rightSideContent .insideBar a:hover {
 	color: #e69700;	
 	outline: none;
 }
 
 .leftSideBar .insideBar a.selected,
-.rightSideContent .insideBar a.selected{
+.rightSideContent .insideBar a.selected {
 	color: #e69700;	
 	outline: none;
 }
@@ -186,11 +186,11 @@ Left Side / Right Side Content
 }
 
 .leftSideBar .insideBar li.Yes {
-	list-style-image: url(../../images/onlineApp/checkMark.gif); 
+	list-style-image: url(../../pics/onlineApp/checkMark.gif); 
 }
 
 .leftSideBar .insideBar li.No {
-	list-style-image: url(../../images/onlineApp/notChecked.gif); 
+	list-style-image: url(../../pics/onlineApp/notChecked.gif); 
 }
 
 .checkListPage {
@@ -207,12 +207,12 @@ Left Side / Right Side Content
 
 .checkListPage li.checkListYes {
 	padding:5px 0px 5px 0px;
-	list-style-image: url(../../images/onlineApp/checkMark.gif); 
+	list-style-image: url(../../pics/onlineApp/checkMark.gif); 
 }
 
 .checkListPage li.checkListNo {
 	padding:5px 0px 5px 0px;
-	list-style-image: url(../../images/onlineApp/notChecked.gif); 
+	list-style-image: url(../../pics/onlineApp/notChecked.gif); 
 }
 
 .checkListPage .fieldList {
@@ -250,60 +250,78 @@ Online Application
 	padding-bottom:0px;
 }
 
+.divPicture {
+	width:151px; 
+	height:151px; 
+	padding:1px;
+	margin-left:210px;
+	border: 1px solid #999;
+}
+
+.divUploadPicture {
+	margin-left:210px;
+}
+
 .largeField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width : 300px;
 }
 
 .mediumField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:200px;
 }
 
 .smallField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:100px;
 }
 
 .xSmallField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:60px;
 }
 
 .xxSmallField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:48px;
+}
+
+.xxxSmallField {
+	font-size:1.2em;
+	border: 1px solid #999;
+	width:30px;
 }
 
 .mediumTextField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:400px;
 	height:75px;
 }
 
 .largeTextFieldPolicy {
 	font-size:1em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:400px;
 	height:125px;
 }
 
 .largeTextField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:400px;
 	height:150px;
 }
 
 .xlTextField {
 	font-size:1.2em;
-	border : 1px solid #999;
+	border: 1px solid #999;
 	width:600px;
 	height:400px;
 }
@@ -317,46 +335,6 @@ Online Application
 	display:none;	
 }
 
-.creditCardAccepted {
-	height:27px;
-	background: url(../../images/onlineApp/creditCardsAccepted.jpg) no-repeat;
-}
-
-.creditCardImageDiv {
-	float:right; 
-	position:relative; 
-	margin:-150px 100px 0px 0px;
-}
-
-/* American Express */
-.creditCardImageDiv .card1 {
-	width:180px;
-	height:120px; 
-	background: url(../../images/onlineApp/cardAmex.gif) no-repeat; 
-}
-
-/* Discover */
-.creditCardImageDiv .card2 {
-	width:180px;
-	height:120px; 
-	background: url(../../images/onlineApp/cardDiscover.gif) no-repeat; 
-}
-
-/* MasterCard */
-.creditCardImageDiv .card3 {
-	width:180px;
-	height:120px; 
-	background: url(../../images/onlineApp/cardMaster.gif) no-repeat; 	
-}
-
-
-/* Visa */
-.creditCardImageDiv .card4 {
-	width:180px;
-	height:120px; 
-	background: url(../../images/onlineApp/cardVisa.gif) no-repeat; 
-}
-
 .printField {
 	width:500px;
 	margin:0px 0px 5px 210px;
@@ -364,7 +342,7 @@ Online Application
 	vertical-align:bottom;
 	border-bottom:1px solid #999999;
 	/* display:block;
-	background: url(../../images/onlineApp/line.gif) repeat-x;  
+	background: url(../../pics/onlineApp/line.gif) repeat-x;  
 	*/
 }
 
@@ -406,25 +384,25 @@ Online Application
 .printFieldCheckYes {
 	display:block;	
 	padding:0px 0px 5px 18px;	
-	background: url(../../images/onlineApp/printCheckY.gif) no-repeat;
+	background: url(../../pics/onlineApp/printCheckY.gif) no-repeat;
 }
 
 .printFieldCheckNo {
 	display:block;	
 	padding:0px 0px 5px 18px;	
-	background: url(../../images/onlineApp/printCheckN.gif) no-repeat;
+	background: url(../../pics/onlineApp/printCheckN.gif) no-repeat;
 }
 
 .printFieldRadioYes {
 	display:block;	
 	padding:0px 0px 5px 18px;	
-	background: url(../../images/onlineApp/printRadioY.gif) no-repeat;
+	background: url(../../pics/onlineApp/printRadioY.gif) no-repeat;
 }
 
 .printFieldRadioNo {
 	display:block;	
 	padding:0px 0px 5px 18px;	
-	background: url(../../images/onlineApp/printRadioN.gif) no-repeat;
+	background: url(../../pics/onlineApp/printRadioN.gif) no-repeat;
 }
 
 
@@ -534,7 +512,7 @@ div.form-container-noBorder .checkMark {
 	width:14px;
 	display:inline-block;
 	background-repeat:no-repeat;
-	background-image: url(../../images/onlineApp/checkMark.gif);
+	background-image: url(../../pics/onlineApp/checkMark.gif);
 }
 
 /* Error messages */
@@ -570,15 +548,14 @@ div.errorContainer p em {
 	font-weight: bold; 
 }
 
-
 /* Page Messages */
 div.pageMessages { 
 	display:none;
 	margin: 10px 0 10px 0; 
 	padding: 5px 10px; 
-	background-color: #c2d9e9;
+	/* background-color: #c2d9e9; */
 	border: #0069aa 1px solid; 
-	font-family: Arial, Helvetica, sans-serif;
+	/* font-family: Arial, Helvetica, sans-serif; */
 }
 
 div.pageMessages p { 
@@ -588,6 +565,38 @@ div.pageMessages p {
 div.pageMessages p em { 
 	color: #0069aa; 
 	font-weight: bold;
+}
+
+/* Picture Message - Section 1 */
+div.pictureMessage {
+	display:none;
+	width:280px;
+	margin: 0px 0 10px 210px;
+	padding: 5px 10px; 
+	/* background-color: #c2d9e9; */
+	border: #0069aa 1px solid; 
+	/* font-family: Arial, Helvetica, sans-serif; */
+}
+
+div.pictureMessage p { 
+	margin: 0px; 
+	color: #0069aa; 
+	font-weight: bold;
+}
+
+div.pictureMessage p.error { 
+	margin: 0px; 
+	color: #C00; 
+	font-weight: bold;
+}
+
+div.pictureMessage p.loading {
+	margin: 0px; 
+	padding: 0px 0px 0px 20px; 
+	color: #0069aa; 
+	font-weight: bold;
+	background-repeat:no-repeat;
+	background-image: url(../../pics/onlineApp/loading.gif);
 }
 
 p.legend { 
@@ -647,6 +656,7 @@ div.form-container legend,
 div.form-container-noBorder legend { 
 	font-weight: bold; 
 	color: #666; 
+	text-transform:uppercase;
 }
 
 div.form-container fieldset div.field,
@@ -741,10 +751,10 @@ div.form-container-noBorder div.buttonrow .button {
 	font-size:1.1em;
 	font-weight:bold;
 	color: #ffffff; 
-	background: #1484e6 url(../../images/onlineApp/buttonBlue.png) 50% 50% repeat; 	
+	background: #1484e6 url(../../pics/onlineApp/buttonBlue.png) 50% 50% repeat; 	
 }
 
 div.form-container div.buttonrow .button:hover,
 div.form-container-noBorder div.buttonrow .button:hover {
-   	background: #e69700 url(../../images/onlineApp/buttonOrange.png) 50% 50% repeat;	
+   	background: #e69700 url(../../pics/onlineApp/buttonOrange.png) 50% 50% repeat;	
 }
