EXTRA - WT - Setting page 3 as read only. Adding cfparam to application.cfm Submit page added.
EXTRA Trainee
Updating jQuery link on header.cfm

--- a/www/smg/extra/internal/linked/css/appSection.css
+++ b/www/smg/extra/internal/linked/css/appSection.css
@@ -262,6 +262,10 @@ Online Application
 	margin-left:210px;
 }
 
+.h2Message {
+	margin:5px 0px 15px 210px;
+}
+
 .largeField {
 	font-size:1.2em;
 	border: 1px solid #999;
