--- a/www/smg/extra/internal/linked/css/appSection.css
+++ b/www/smg/extra/internal/linked/css/appSection.css
@@ -43,8 +43,8 @@ Page Header
 	top:0px;
 	left:5px;
 	position:absolute;
-	background-image:url(../../pics/extra-small-logo.jpg);
 	background-repeat:no-repeat;
+	background-image:url(../../pics/extra-small-logo.jpg);
 }
 
 .topLeft a {
@@ -605,6 +605,11 @@ div.pictureMessage p.loading {
 
 p.legend { 
 	margin-bottom: 1em; 
+	padding-bottom:10px;
+}
+
+p.legend img { 
+	float:right;
 }
 
 p.legend strong {
