--- a/www/smg/extra/internal/linked/css/onlineApplication.css
+++ b/www/smg/extra/internal/linked/css/onlineApplication.css
@@ -1,4 +1,9 @@
-/* Application Stats Table */
+/*
+**********************************************************************************
+
+Application Stats Table
+
+************************************************************************************/
 .applicationStatsTable {
 	border:1px solid #999999;
 }
@@ -278,54 +283,8 @@ div.form-container div.controlset div {
 	width : 300px;
 }
 
-.mediumField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:200px;
-}
-
 .smallField {
 	font-size:1.2em;
 	border : 1px solid #999;
 	width:100px;
-}
-
-.xSmallField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:60px;
-}
-
-.xxSmallField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:48px;
-}
-
-.mediumTextField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:400px;
-	height:75px;
-}
-
-.largeTextFieldPolicy {
-	font-size:1em;
-	border : 1px solid #999;
-	width:400px;
-	height:125px;
-}
-
-.largeTextField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:400px;
-	height:150px;
-}
-
-.xlTextField {
-	font-size:1.2em;
-	border : 1px solid #999;
-	width:600px;
-	height:400px;
 }
