EXTRA - WAT - Added forgot password to index.cfm Replacing date-picker with jQuery DatePicker Adding a jQuery function to format numbers (phone, SSN, DOB, etc)

--- a/www/smg/extra/internal/linked/css/baseStyle.css
+++ b/www/smg/extra/internal/linked/css/baseStyle.css
@@ -14,6 +14,15 @@
 /*
 **********************************************************************************
 
+These are used in the insert/edit pages
+
+************************************************************************************/
+.editPage { display:none;}
+.hiddenField { display:none;}
+
+/*
+**********************************************************************************
+
 css for timepicker
 
 ************************************************************************************/
