--- a/www/smg/extra/internal/linked/css/login.css
+++ b/www/smg/extra/internal/linked/css/login.css
@@ -1,22 +1,27 @@
 @charset "utf-8";
 /* CSS Document */
 
+/************************************************************************************
+
+Login Options
+
+************************************************************************************/
+.hiddenDiv {
+	display:none;	
+}
+
 /***********************************************************************************
 
 Form Errors
 These are the styles used to display the form errors.
 
 ************************************************************************************/
-table.form-errors {
-	/* margin-bottom: 12px;
-	float: inherit; 
-	padding-top: 10px;
-	*/
-	width: 100%;
+table.formErrors {
+	width:100%;
 	display: block;
 }
 
-table.form-errors TD.errors {
+table.formErrors TD.errors {
 	color: #FF0000;
 	text-align: left;
 	font-family: Verdana, Arial, Helvetica, sans-serif;
@@ -24,13 +29,13 @@ table.form-errors TD.errors {
 	padding:0px 10px 0px 10px;
 }
 
-table.form-errors TD.errors DIV.header {
+table.formErrors TD.errors DIV.header {
 	color: #AA0000;
 	font-weight: bold;
 	margin-bottom: 5px;
 }
 
-table.form-errors TD.errors UL.list {
+table.formErrors TD.errors UL.list {
 	padding-left:15px;
 }
 
@@ -40,22 +45,25 @@ Page Messages
 These are the styles used to display the page messages.
 
 ************************************************************************************/
-table.page-messages {
-	margin-bottom: 12px;
-	float: left;
-	width: 100%;
+table.pageMessages {
+	width:100%;
 	display: block;
-	padding-top: 10px;
 }
 
-table.page-messages TD.message {
-	color: #CC0000;
-	/*CC0000 | FF0000*/
+table.pageMessages td {
+	color: #0069aa; 
 	text-align: left;
+	font-family: Verdana, Arial, Helvetica, sans-serif;
+	font-size: 10px;
+	padding:0px 10px 0px 10px;
 }
 
-table.page-messages TD.message A {
+table.pageMessages td DIV.header {
+	color: #AA0000;
+	font-weight: bold;
+	margin-bottom: 5px;
 }
 
-table.page-messages TD.message IMG {
+table.pageMessages td UL.list {
+	padding-left:15px;
 }
