--- a/www/smg/extra/internal/style.css
+++ b/www/smg/extra/internal/style.css
@@ -1,4 +1,6 @@
 body {
+	font-size: 10px; 
+	font-family: Verdana, Arial, Helvetica, sans-serif;	
 	background-image: url(pics/back.gif);
 	margin-left: 10px;
 	margin-top: 10px;
