--- a/www/granbyprep/css/granby.css
+++ b/www/granbyprep/css/granby.css
@@ -160,6 +160,14 @@ a:active {
 	margin-top: 10px;
 	margin-left: 20px;
 }
+.photoAbout {
+	float: right;
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-left: 20px;
+	margin-bottom: 10px;
+	border: thin solid #000;
+}
 .clearfix {
 	display: block;
 	clear: both;
@@ -221,6 +229,11 @@ a:active {
 	line-height: 16px;
 	font-style: italic;
 }
+.red {
+	font-family: Arial, Helvetica, sans-serif;
+	color: #900;
+	text-decoration: underline;
+}
 .formText {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10px;
@@ -245,5 +258,11 @@ a:active {
 	font-size: 12px;
 	font-style: italic;
 	line-height: 8px;
+	color: #000;
+}
+.formTextRed {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 11px;
+	font-weight: bold;
 	color: #000;
 }
