--- a/www/granbyprep/linked/css/baseStyle.css
+++ b/www/granbyprep/linked/css/baseStyle.css
@@ -41,22 +41,23 @@ These are the styles used to display the page messages.
 
 ************************************************************************************/
 table.page-messages {
-	margin-bottom: 12px;
-	float: left;
+	display:none;
 	width: 100%;
 	display: block;
-	padding-top: 10px;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-table.page-messages TD.message {
-	color: #CC0000;
-	/*CC0000 | FF0000*/
-	text-align: left;
+table.page-messages p { 
+	padding:0px 10px 0px 30px;
 }
 
-table.page-messages TD.message A {
+table.page-messages p em { 
+	color: #0069aa; 
+	font-weight: bold;
 }
 
-table.page-messages TD.message IMG {
-}
+
+
+
+
 
