--- a/www/student-management/extra/internal/linked/css/onlineApplication.css
+++ b/www/student-management/extra/internal/linked/css/onlineApplication.css
@@ -1,3 +1,8 @@
+body {
+	font-size:1em;	
+	font-family: Arial, Helvetica, sans-serif;
+}
+
 /*
 **********************************************************************************
 
@@ -62,8 +67,7 @@ Application Stats Table
 .divInformation {
 	float:right;
 	display:inline;
-	width:300px; 
- 	style="float:right;
+	width:450px; 
 	border:1px solid ##cccccc;	
 }
 
