--- a/www/student-management/extra/internal/linked/css/onlineApplication.css
+++ b/www/student-management/extra/internal/linked/css/onlineApplication.css
@@ -1,7 +1,9 @@
+/****
 body {
 	font-size:1em;	
 	font-family: Arial, Helvetica, sans-serif;
 }
+****/
 
 /*
 **********************************************************************************
