--- a/www/student-management/nsmg/linked/css/student_profile.css
+++ b/www/student-management/nsmg/linked/css/student_profile.css
@@ -7,11 +7,38 @@
 	border-right: 1px solid #999;;
 	border-bottom: 1px solid #999;;
 	border-top: 1px solid #999;;
-	padding: 6px 8px 6px 8px;
+	/**padding: 6px 8px 6px 8px;**/
 	margin-bottom:10px;
 	background-color:#FFF;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:14px;
 }
-
+.inner_profileTable {
+	
+	background-color:#FFF;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:14px;
+}
+.profileTable2 {
+	width:800px;
+	border-left: 0px solid #999;
+	border-right: 0px solid #999;;
+	border-bottom: 0px solid #999;;
+	border-top: 0px solid #999;;
+	/***padding: 6px 8px 6px 8px;***/
+	margin-bottom:10px;
+	background-color:#FFF;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size:14px;
+}
+.bottom_center{
+	vertical-align:bottom;
+	text-align:center;
+}
+.bottom_right{
+	vertical-align:bottom;
+	text-align:right;
+}
 .titleLeft {
 	width:200px;
 	vertical-align:top;
@@ -48,4 +75,15 @@
 .comments {
 	text-align:justify;
 	display:block;
+}
+div#test {
+
+    background-image:  url(http://smg.local/nsmg/pics/activateNot.png);
+
+    background-repeat: no-repeat;
+
+    height: 500px;
+
+    width: 380px;
+
 }
