--- a/www/student-management/extra/internal/linked/css/onlineApplication.css
+++ b/www/student-management/extra/internal/linked/css/onlineApplication.css
@@ -1,9 +1,7 @@
-/****
 body {
-	font-size:1em;	
+	font-size:0.9em;	
 	font-family: Arial, Helvetica, sans-serif;
 }
-****/
 
 /*
 **********************************************************************************
@@ -25,7 +23,7 @@ Application Stats Table
 	text-decoration:none;
 }
 
-.applicationStatsStudent {
+.applicationStatsCandidate {
 	text-align:center; 
 	padding:5px;
 	background-color:#fef3b9;
