GranbyPrep/MacDuffie - Updating online application with MacDuffie colors and information.

--- a/www/granbyprep/linked/css/adminToolLogin.css
+++ b/www/granbyprep/linked/css/adminToolLogin.css
@@ -2,6 +2,12 @@
 /* CSS Document */
 
 /************************************************************************************
+GranbyPrep Color #052f44
+MacDuffie Dark Color #641c20
+MacDuffie Light Color #d2a8ab
+************************************************************************************/
+
+/************************************************************************************
 
 Login Box
 
@@ -106,7 +112,7 @@ body {
 	font-family: Tahoma, Geneva, sans-serif;
 	font-size: 10px;
 	color: #999;
-	border:1px solid #052f44; /* #d5d6d6; */
+	border:1px solid #641c20; /* #d5d6d6; */
 }
 
 /************************************************************************************
@@ -149,7 +155,7 @@ Login Text
 ************************************************************************************/
 
 .userTypeBox {
-	background-color: #052f44;
+	background-color: #641c20;
 	padding:2px;
 	margin-bottom:10px;
 }
