--- a/www/granbyprep/linked/css/appSection.css
+++ b/www/granbyprep/linked/css/appSection.css
@@ -1,6 +1,12 @@
 @charset "utf-8";
 /* CSS Document */
 
+/************************************************************************************
+GranbyPrep Color #052f44
+MacDuffie Dark Color #641c20
+MacDuffie Light Color #d2a8ab
+************************************************************************************/
+
 html, body {
 	height: 100%;
 	padding:0px;
@@ -15,8 +21,8 @@ Page Header
 
 ************************************************************************************/
 .topBar {
-	background-color: #c2d9e9;
-	border-bottom:10px solid #0069aa;
+	background-color: #FFFFFF; /* Granby #c2d9e9; */
+	border-bottom:10px solid #641c20; /* Granby #0069aa; */
 	width:100%;
 	height:70px;
 }
@@ -57,7 +63,7 @@ Page Header
 	font-family: segoe ui, Arial, sans-serif; 
 	font-weight:bold;
 	font-size: 2em; 
-	color: #0069aa;
+	color: #641c20; /* Granby #0069aa; */
 }
 
 .topLeft .subTitle {
@@ -66,7 +72,7 @@ Page Header
 	font-family: segoe ui, Arial, sans-serif; 
 	font-weight:bold;
 	font-size: 1.2em; /*1.8em; */
-	color: #0069aa;
+	color: #641c20; /* Granby #0069aa; */
 }
 
 .topRight {
@@ -481,7 +487,7 @@ Page Footer
 .pageFooter, .push {
 	width:100%;
 	height: 20px; /* .push must be the same height as .footer */
-	background-color: #0069aa; /* #020D1E */
+	background-color: #641c20; /* Granby #0069aa; #020D1E */
 	/* Multicolumn Layout With Sticky Footer | Add clear to the .push div | clear: both; */ 
 	clear: both;
 }
