--- a/www/student-management/nsmg/student_app/app.css
+++ b/www/student-management/nsmg/student_app/app.css
@@ -46,4 +46,12 @@ small {
 
 .tablebotton {border-top: 0px; border-right: 0px; border-left: 0px; border-bottom: 2px solid #8f8f8f; background: #FFFFFF;}
 
-.buttontop {border-top: 1px solid #CFCFCF; border-right: 0px; border-left: 0px; border-bottom: 0px; background: #FFFFFF;}
+.buttontop {
+		padding-top:10px;
+		border-top: 1px solid #CFCFCF; 
+		border-right: 0px; 
+		border-left: 0px; 
+		border-bottom: 0px; 
+		background: #FFFFFF;
+		min-height:20px;
+}
