--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -14,6 +14,128 @@
 /***** END OF HEADER.CFM *****/
 
 
+/***** Default FORM *****/
+
+.columnTitle {
+	font-weight:bold;	
+}
+
+.defaultForm input { 
+	border: 1px solid #; 
+	/* margin-bottom: .5em; */		
+}
+
+.defaultForm select {
+	border: 1px solid #CCC; 
+	/* margin-bottom: .5em; */		
+}
+
+.smallField {
+	width : 80px;
+}
+
+.mediumField {
+	width : 140px;
+}
+
+.largeField {
+	width : 200px;
+}
+
+.xLargeTextArea {
+	height: 80px;
+	width : 350px;
+	margin-bottom: .5em;
+}
+
+.formNote {
+	padding:2px 0 0 0;
+	margin:0 0 0 2px;
+	font-size:0.8em;
+}
+
+.displayNone {
+	display:none;
+}
+
+.submitButton {
+	cursor:pointer;
+	width:80px;
+	padding:2px;
+	margin-top:15px; 
+	margin-bottom: .5em; 		
+	border: 1px solid #CCC; 
+}
+
+/***** END OF Default FORM *****/
+
+
+
+/***** HOST FAMILY LEAD *****/
+
+
+
+
+/***** END OF HOST FAMILY LEAD *****/
+
+
+/***** PAGE MESSAGE *****/
+
+div.pageMessages { 
+	font-size:0.8em;
+	display:none;
+	margin: 0px; 
+	padding: 5px 10px; 
+	background-color: #c2d9e9;
+	border: #0069aa 1px solid; 
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+div.pageMessages p { 
+	margin: 0; 
+}
+
+div.pageMessages p em { 
+	color: #0069aa; 
+	font-weight: bold;
+}
+
+/***** END OF PAGE MESSAGE *****/
+
+
+/***** ERROR MESSAGE *****/
+div.errors { 
+	margin: 0px; 
+	padding: 5px 10px; 
+	border: #FC6 1px solid; 
+	background-color: #FFC; 
+}
+
+div.errorContainer label,
+div.errors label { 
+	color:#000;
+}
+
+div.errors p,
+div.errorContainer p { 
+	margin: 0; 
+}
+
+div.errors p em,
+div.errorContainer p em { 
+	color: #C00; 
+	font-style: normal; 
+	font-weight: bold; 
+}
+
+div.errors ol {
+	list-style: none;
+	text-indent:-3em;
+}
+
+/***** END OF ERROR MESSAGE *****/
+
+
 /***** PROJECT HELP *****/
 
 .projectHelpNote {
@@ -22,7 +144,9 @@
 
 .projectHelpTitle {
 	background-color:#e2efc7;  /* #c6c6c6 #EAE8E8 */
-	line-height:15px;	
+	line-height:15px;
+	margin-bottom:50px;
+	padding-bottom:50px;
 }
 
 .projectHelpActivityTitle {
