EXITS - Host Family Leads - Emailing area representatives when a new lead is assigned to them. - Adding warning for final decisions (form and pop up) - Avoiding entering blank history information if information has not been changed.

--- a/www/student-management/nsmg/linked/css/baseStyle.css
+++ b/www/student-management/nsmg/linked/css/baseStyle.css
@@ -54,6 +54,14 @@
 	font-size:0.8em;
 }
 
+.formWarning {
+	color:#F00;
+	padding:2px 0 0 0;
+	margin:0 0 0 2px;
+	font-size:0.8em;
+	font-weight:bold;
+}
+
 .displayNone {
 	display:none;
 }
